# copilot-sre

./: .gitignore  README.md  pyproject.toml
copilot_sre/: __init__.py  analysis.py  app.py  azure_connector.py  copilot_runner.py  github_connector.py  loader.py  models.py  prompt_builder.py  render.py  web.py
copilot_sre/ui/: app.js  index.html  styles.css
docs/: ARCHITECTURE.md  DEMO.md  EVALUATION.md  GITHUB_PUBLISHING.md  HOW_IT_WORKS_WITH_COPILOT_CLI.md  LAUNCH_COPY.md  MCP_PLAN.md  NEXT_RELEASE.md  PITCH.md  WHY_COPILOT_SRE.md
samples/incident-001/: incident.json
samples/incident-001/runbooks/: checkout-5xx.md  payments-dependency.md  rollback.md
scripts/: capture_ui_screenshots.ps1  make_demo_gif.py  playwright_capture_demo.js  record_demo_gif.ps1
tests/: test_analysis.py  test_azure_connector.py  test_github_connector.py
