[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "copilot-sre"
version = "0.1.0"
description = "Incident commander workflows on top of GitHub Copilot CLI"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "OpenAI Codex" }
]

[project.scripts]
copilot-sre = "copilot_sre.app:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
